--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
     "zod": "^4.3.6"
