--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "jest"
-  },
+ "scripts": {
+  "test": "jest --runInBand",
+ "dev": "ts-node-dev src/server.ts"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
