--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- "scripts": {
- "test": "NODE_ENV=test jest --runInBand",
- "dev": "ts-node-dev src/server.ts"
-},
+  "scripts": {
+    "test": "NODE_ENV=test jest --runInBand",
+    "dev": "ts-node-dev src/server.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
     "multer": "^2.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -31,6 +33,8 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^25.2.3",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^30.2.0",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
