--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --runInBand",
-    "dev": "ts-node-dev src/server.ts"
+    "test": "NODE_ENV=test jest --runInBand --forceExit",
+    "dev": "ts-node-dev src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
